--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ Nodes:
   -
     PanelType: "V2board" # Panel type: SSpanel, V2board
     ApiConfig:
-      ApiHost: "www.houziji.xyz" 
+      ApiHost: "https://www.houziji.xyz" 
       ApiKey: "6Pyck3LJR1tRACU70wnvyAyzaBNEWzffdff" 
       NodeID: 1
       NodeType: V2ray # Node type: V2ray, Shadowsocks, Trojan
